[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Room2/window.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Room2/Window/window_closed.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Room2/Window/window_open_big.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Room2/Window/window_open_small.png" type="Texture" id=4]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70.3485, 67.1063 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 338.542, 353.283 )

[node name="Window" type="Node2D"]
script = ExtResource( 1 )

[node name="Closed" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="OpenSmall" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="OpenBig" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="PaperTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaperTrigger"]
position = Vector2( 248.719, 247.221 )
shape = SubResource( 1 )

[node name="WindowTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindowTrigger"]
shape = SubResource( 2 )
[connection signal="input_event" from="PaperTrigger" to="." method="on_paper_clicked"]
[connection signal="input_event" from="WindowTrigger" to="." method="on_window_clicked"]
